Fix part number vertical alignment in guides
https://www.pivotaltracker.com/story/show/67464120

--- a/app/assets/stylesheets/publisher.scss
+++ b/app/assets/stylesheets/publisher.scss
@@ -234,7 +234,7 @@ aside .page-navigation {
     }
 
     a {
-      @include inline-block;
+      display: block;
       padding: 0.25em 1em 0.25em 0;
 
       @include ie-lte(7) {
